// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MathEquation adapter can be constructed WITH attributes 1`] = `
Object {
  "modelState": Object {
    "align": "left",
    "label": "",
    "latex": "test",
  },
}
`;

exports[`MathEquation adapter can be converted to JSON 1`] = `
Object {
  "content": Object {
    "align": "left",
    "label": "",
    "latex": "test",
  },
}
`;

exports[`MathEquation adapter can be created WITHOUT attributes 1`] = `
Object {
  "modelState": Object {
    "align": "center",
    "label": "",
    "latex": "",
  },
}
`;
